--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
   },
   "homepage": "https://github.com/fherrerao/webpack_template#readme",
   "dependencies": {
-    "lodash": "^4.17.21",
+    "cross-fetch": "^3.1.5",
+    "lodash": "^4.17.21",    
+    "node-fetch": "^3.2.0",
     "package-lock.json": "^1.0.0",
     "uuid": "^8.3.2"
   },
