Update dist folder

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "webpack_template",
   "version": "1.0.0",
   "description": "Webpack template to use as a starting point in projects.",
-  "main": "index.js",
+  "main": "index.js",  
   "private": true,
   "scripts": {
     "test": "jest",
@@ -13,7 +13,9 @@
     "stylelint": "npx stylelint '**/*.css' '**/*.scss'",
     "fstylelint": "npx stylelint --fix '**/*.css' '**/*.scss'",
     "hint": "npx hint --telemetry=off .",
-    "fhint": "npx hint --fix --telemetry=off ."
+    "fhint": "npx hint --fix --telemetry=off .",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "jest": {
     "testEnvironment": "jsdom"
@@ -28,7 +30,7 @@
   "bugs": {
     "url": "https://github.com/fherrerao/webpack_template/issues"
   },
-  "homepage": "https://github.com/fherrerao/webpack_template#readme",
+  "homepage": "https://fherrerao.github.io/Capstone-Group-Project",
   "dependencies": {
     "cross-fetch": "^3.1.5",
     "lodash": "^4.17.21",
@@ -43,6 +45,7 @@
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.25.4",
+    "gh-pages": "^3.2.3",
     "hint": "^6.1.9",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.4.7",
